--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,8 @@
         <a href="./index.html">  Home  </a>
         <a href="./About.html"> About </a>
         <a href="#">  Contact </a >
-        <a href="./game_info.html"> Game Info</a>
+            <a href="./Game_info.html"> Game Info</a>
+       
     </div>
     <img class="imagen1" src="https://media.discordapp.net/attachments/1059937897236660336/1073396074766671993/design2_image1.jpg?width=409&height=173" alt="Jugadores de Hockey">
     <h2 class="h2">Contact</h2>
