--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
         <a href="#"> Home </a>
         <a href="./About.html"> About </a>
         <a href="./Contact.html"> Contact </a>
-        <a href="./game_info.html"> Game Info</a>
+        <a href="./Game_info.html"> Game Info</a>
+        
     </div>
 
     <main>
     <img class="imagen1" src="https://media.discordapp.net/attachments/1059937897236660336/1073396074766671993/design2_image1.jpg?width=409&height=173" alt="Jugadores de Hockey">
-     <h2 class="h2">Upcoming Events</h2>
+     
      <div class="logo1"><img src="./imagenes/logo/android-chrome-192x192.png" alt="logo"></div>
     </main>
 
-    <img class="espaciologo" src="./imagenes/logo/android-chrome-192x192.png" alt="logo">  
+    <img class="espaciologo" src="./imagenes/logo/favicon.ico" alt="logo">  
 <div class="h3">
     <h3>August 4</h3>
     <p>MDSL Fundraiser</p>
