--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         width: 120px;
         font-family: Arial, Helvetica, sans-serif;
         font-weight: 700;
-        background-color: orange;
+        background-color: #ff4400;
         border-radius: 8px;
         padding: 10px 30px;
     }
-   
+  
     </style>
 </head>
     <h1 class="h1">Mighty Ducks Hockey League</h1>
@@ -33,15 +33,11 @@
      
      <div class="logo1"><img src="./imagenes/logo/android-chrome-192x192.png" alt="logo"></div>
     </main>
-
-    <img class="espaciologo" src="./imagenes/logo/favicon.ico" alt="logo">  
-<div class="h3">
-    <h3>August 4</h3>
-    <p>MDSL Fundraiser</p>
-    <h3>August 16</h3>
-    <p>Season Kick-off: Meet the Teams</p>
-    <h3 >September 1</h3>
-    <p>First Game of the Season (Check Game Schedule for details)</p>
+ 
+    <img id="img1" src="./imagenes/imagen1/android-chrome-512x512.png" class="h4" alt="imagen1"> 
+    <img id="img2" src="./imagenes/imagen3/android-chrome-512x512.png" class="h4" alt="imagaen3">
+    <img id="img3" src="./imagenes/imagen2/android-chrome-512x512.png" class="h4" alt="imagaen2">
+    
 </div>
 </body>
 </html>
