--- a/Contact.html
+++ b/Contact.html
@@ -24,12 +24,12 @@
         <a href="./index.html">  Home  </a>
         <a href="./About.html"> About </a>
         <a href="#">  Contact </a >
-            <a href="./Game_info.html"> Game Info</a>
+        <a href="./Game_info.html"> Game Info</a>
        
     </div>
     <img class="imagen1" src="https://media.discordapp.net/attachments/1059937897236660336/1073396074766671993/design2_image1.jpg?width=409&height=173" alt="Jugadores de Hockey">
     <h2 class="h2">Contact</h2>
-    <img class="espaciologo" src="./imagenes/logo/android-chrome-192x192.png" alt="">
+    <img class="espaciologo" src="./imagenes/logo/android-chrome-192x192.png" alt="logo">
     <div class="h3">
     <h3>Please email us at <u>mdhl@chihockey.org</u> </h3>
     <h3>We reply to your email as soon as we can</h3>
